--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -1,6 +1,3 @@
-html {
-}
-
 html,
 body,
 html body.swal2-height-auto,
@@ -8,175 +5,10 @@ html body.swal2-height-auto,
   height: 100% !important;
 }
 
-.back,
-.front {
-  min-height: 100%;
+a {
+  text-decoration: none;
 }
 
-.front {
-  background: green;
-}
-
-.back {
-  background: #f0f2f5;
-  padding-top: 56px;
-  a {
-    text-decoration: none;
-  }
-  th {
-    font-weight: normal;
-    white-space: nowrap;
-  }
-  th:not(:last-child)::before {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 1px;
-    height: 1.6em;
-    background-color: rgba(0, 0, 0, 0.06);
-    transform: translateY(-50%);
-    transition: background-color 0.3s;
-    content: '';
-  }
-  td {
-    white-space: nowrap;
-    .circle {
-      width: 6px;
-      height: 6px;
-      border-radius: 50%;
-    }
-  }
-  .page-item.active .page-link {
-    cursor: default;
-  }
-  .modal-content {
-    .modal-header {
-      padding: 1rem 1.5rem;
-    }
-
-    nav {
-      .position-absolute {
-        top: 1.5rem;
-        right: 1.5rem;
-      }
-      a {
-        &:hover {
-          color: $primary !important;
-        }
-      }
-    }
-
-    .modal-body {
-      scroll-behavior: smooth;
-      padding: 1.5rem 119px 3rem 1.5rem;
-      .text-red {
-        color: $red-500;
-      }
-      .upfile-wrapper {
-        width: 144px;
-        height: 144px;
-        padding: 8px;
-        cursor: pointer;
-        transition: ease 0.3s;
-
-        border-color: $gray-400 !important;
-
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        .fs-6 {
-          text-indent: 0.25px;
-          letter-spacing: 0.25px;
-        }
-        .mask {
-          position: relative;
-          &:hover {
-            &::after,
-            &::before {
-              opacity: 1;
-            }
-          }
-          &::after {
-            opacity: 0;
-            font-family: 'Material Icons';
-            content: 'delete';
-            position: absolute;
-            font-size: 1.5rem;
-            color: #fff;
-          }
-          &::before {
-            content: '';
-            opacity: 0;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background: rgba(0, 0, 0, 0.5);
-            transition: ease 0.3s;
-          }
-        }
-        &.btn-size {
-          width: 100%;
-          flex-direction: row;
-          height: 38px;
-        }
-      }
-      .colorReveal {
-        height: 0.625rem;
-        background-color: $gray-100;
-        border-color: $gray-400 !important;
-      }
-      .colorsName {
-        border-bottom-right-radius: 0;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-      }
-      .name {
-        border-bottom-right-radius: 0;
-        border-top-right-radius: 0;
-      }
-      .colorChart {
-        border-left: 0;
-        border-bottom-left-radius: 0;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-      }
-      .chart {
-        border-left: 0;
-        border-bottom-left-radius: 0;
-        border-top-left-radius: 0;
-      }
-    }
-
-    .upload {
-      border-style: dashed !important;
-      &:hover {
-        border-color: $primary !important;
-      }
-    }
-
-    .form-group.position-relative input {
-      padding-right: 32px;
-      &:focus + button {
-        display: inline-block;
-      }
-    }
-
-    .form-group.position-relative button {
-      display: none;
-      margin-right: 4px;
-    }
-
-    .form-group.position-relative.inputClear:hover {
-      button {
-        display: inline-block;
-      }
-    }
-
-    .modal-footer {
-      padding: 1rem 1.5rem;
-      * {
-        margin: 0;
-      }
-    }
-  }
+.pointer {
+  cursor: pointer;
 }
