--- a/src/assets/stylesheets/custom/_variable.scss
+++ b/src/assets/stylesheets/custom/_variable.scss
@@ -1,7 +1,8 @@
 $color-main: #db4d6d;
 $color-main-hover: #c9385a;
+$color-main-light-hover: #e07b93;
 $color-main-active: #bd2b4d;
-$color-secondary: #6f7275;
+$color-border-active: #656565;
 
 $aside-navbar-width: 168px;
 $product-form-width: 272px;
@@ -37,28 +38,28 @@ $height-width: (
   font-size: 1.875rem;
 }
 
+@mixin xs {
+  @media (max-width: 575px) {
+    @content;
+  }
+}
 @mixin sm {
-  @media (max-width: 576px) {
+  @media (max-width: 767px) {
     @content;
   }
 }
 @mixin md {
-  @media (max-width: 768px) {
+  @media (max-width: 991px) {
     @content;
   }
 }
 @mixin lg {
-  @media (max-width: 992px) {
+  @media (max-width: 1199px) {
     @content;
   }
 }
 @mixin xl {
-  @media (max-width: 1200px) {
-    @content;
-  }
-}
-@mixin xxl {
-  @media (max-width: 1400px) {
+  @media (max-width: 1399px) {
     @content;
   }
 }
@@ -70,9 +71,9 @@ $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
 $gray-250: #f0f0f0;
 $gray-300: #dee2e6;
-$gray-400: #ced4da;
+$gray-400: #cccccc; // #ced4da
 $gray-500: #adb5bd;
-$gray-600: #6c757d;
+$gray-600: #6f7275; // #6c757d
 $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #292b2c; // #212529
