--- a/src/assets/stylesheets/custom/_variable.scss
+++ b/src/assets/stylesheets/custom/_variable.scss
@@ -69,6 +69,7 @@ $height-width: (
 $white: #fff;
 $gray-000: #fafafa;
 $gray-100: #f8f9fa;
+$gray-150: #f5f5f5;
 $gray-200: #e9ecef;
 $gray-250: #f0f0f0;
 $gray-300: #dee2e6;
