--- a/src/assets/stylesheets/custom/_variable.scss
+++ b/src/assets/stylesheets/custom/_variable.scss
@@ -1,13 +1,11 @@
-$color-main: #db4d6d;
-$color-main-hover: #c9385a;
-$color-main-light-hover: #e07b93;
-$color-main-active: #bd2b4d;
-$color-border-active: #656565;
-
-$aside-navbar-width: 168px;
-$product-form-width: 272px;
-
-$height-width: (
+$color-main : #DB4D6D;
+$color-main-hover : #C9385A;
+$color-main-light-hover : #E07B93;
+$color-main-active : #BD2B4D;
+$color-border-active : #656565;
+$aside-navbar-width : 168px;
+$product-form-width : 272px;
+$height-width : (
   '16': 16px,
   '28': 28px,
   '36': 36px,
@@ -16,27 +14,27 @@ $height-width: (
 
 @each $key, $value in $height-width {
   .h-#{$key} {
-    height: $value;
+    height : $value;
   }
   .w-#{$key} {
-    width: $value;
+    width : $value;
   }
 }
 
 @mixin font-sm {
-  font-size: 0.875rem; // 14
+  font-size : .875rem; // 14
 }
 @mixin font-md {
-  font-size: 1rem; // 16
+  font-size : 1rem; // 16
 }
 @mixin font-lg {
-  font-size: 1.25rem; // 20
+  font-size : 1.25rem; // 20
 }
 @mixin font-xl {
-  font-size: 1.5rem; // 24
+  font-size : 1.5rem; // 24
 }
 @mixin font-xxl {
-  font-size: 1.875rem; // 30
+  font-size : 1.875rem; // 30
 }
 
 @mixin xs {
@@ -66,25 +64,25 @@ $height-width: (
 }
 
 // scss-docs-start gray-color-variables
-$white: #fff;
-$gray-000: #fafafa;
-$gray-100: #f8f9fa;
-$gray-150: #f5f5f5;
-$gray-200: #e9ecef;
-$gray-250: #f0f0f0;
-$gray-300: #dee2e6;
-$gray-400: #cccccc; // #ced4da
-$gray-500: #adb5bd;
-$gray-600: #6f7275; // #6c757d
-$gray-700: #495057;
-$gray-800: #343a40;
-$gray-900: #292b2c; // #212529
-$black: #000;
+$white : #FFFFFF;
+$gray-000 : #FAFAFA;
+$gray-100 : #F8F9FA;
+$gray-150 : #F5F5F5;
+$gray-200 : #E9ECEF;
+$gray-250 : #F0F0F0;
+$gray-300 : #DEE2E6;
+$gray-400 : #CCCCCC; // #ced4da
+$gray-500 : #ADB5BD;
+$gray-600 : #6F7275; // #6c757d
+$gray-700 : #495057;
+$gray-800 : #343A40;
+$gray-900 : #292B2C; // #212529
+$black : #000000;
 // scss-docs-end gray-color-variables
 
 // fusv-disable
 // scss-docs-start gray-colors-map
-$grays: (
+$grays : (
   '100': $gray-100,
   '200': $gray-200,
   '300': $gray-300,
@@ -99,20 +97,20 @@ $grays: (
 // fusv-enable
 
 // scss-docs-start color-variables
-$blue: #0d6efd;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #d63384;
-$red: #dc3545;
-$orange: #fd7e14;
-$yellow: #ffc107;
-$green: #198754;
-$teal: #20c997;
-$cyan: #0dcaf0;
+$blue : #0D6EFD;
+$indigo : #6610F2;
+$purple : #6F42C1;
+$pink : #D63384;
+$red : #DC3545;
+$orange : #FD7E14;
+$yellow : #FFC107;
+$green : #198754;
+$teal : #20C997;
+$cyan : #0DCAF0;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
-$colors: (
+$colors : (
   'blue': $blue,
   'indigo': $indigo,
   'purple': $purple,
@@ -130,18 +128,18 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary: $blue;
-$secondary: $gray-600;
-$success: $green;
-$info: $cyan;
-$warning: $yellow;
-$danger: $red;
-$light: $gray-100;
-$dark: $gray-900;
+$primary : $blue;
+$secondary : $gray-600;
+$success : $green;
+$info : $cyan;
+$warning : $yellow;
+$danger : $red;
+$light : $gray-100;
+$dark : $gray-900;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
-$theme-colors: (
+$theme-colors : (
   'primary': $primary,
   'secondary': $secondary,
   'success': $success,
@@ -155,119 +153,109 @@ $theme-colors: (
 // scss-docs-end theme-colors-map
 
 // scss-docs-start theme-colors-rgb
-$theme-colors-rgb: map-loop($theme-colors, to-rgb, '$value');
+$theme-colors-rgb : map-loop($theme-colors, to-rgb, '$value');
 // scss-docs-end theme-colors-rgb
 
 // The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
 // See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
-$min-contrast-ratio: 4.5;
+$min-contrast-ratio : 4.5;
 
 // Customize the light and dark text colors for use in our color contrast function.
-$color-contrast-dark: $black;
-$color-contrast-light: $white;
+$color-contrast-dark : $black;
+$color-contrast-light : $white;
 
 // fusv-disable
-$blue-100: tint-color($blue, 80%);
-$blue-200: tint-color($blue, 60%);
-$blue-300: tint-color($blue, 40%);
-$blue-400: tint-color($blue, 20%);
-$blue-500: $blue;
-$blue-600: shade-color($blue, 20%);
-$blue-700: shade-color($blue, 40%);
-$blue-800: shade-color($blue, 60%);
-$blue-900: shade-color($blue, 80%);
-
-$indigo-100: tint-color($indigo, 80%);
-$indigo-200: tint-color($indigo, 60%);
-$indigo-300: tint-color($indigo, 40%);
-$indigo-400: tint-color($indigo, 20%);
-$indigo-500: $indigo;
-$indigo-600: shade-color($indigo, 20%);
-$indigo-700: shade-color($indigo, 40%);
-$indigo-800: shade-color($indigo, 60%);
-$indigo-900: shade-color($indigo, 80%);
-
-$purple-100: tint-color($purple, 80%);
-$purple-200: tint-color($purple, 60%);
-$purple-300: tint-color($purple, 40%);
-$purple-400: tint-color($purple, 20%);
-$purple-500: $purple;
-$purple-600: shade-color($purple, 20%);
-$purple-700: shade-color($purple, 40%);
-$purple-800: shade-color($purple, 60%);
-$purple-900: shade-color($purple, 80%);
-
-$pink-100: tint-color($pink, 80%);
-$pink-200: tint-color($pink, 60%);
-$pink-300: tint-color($pink, 40%);
-$pink-400: tint-color($pink, 20%);
-$pink-500: $pink;
-$pink-600: shade-color($pink, 20%);
-$pink-700: shade-color($pink, 40%);
-$pink-800: shade-color($pink, 60%);
-$pink-900: shade-color($pink, 80%);
-
-$red-100: tint-color($red, 80%);
-$red-200: tint-color($red, 60%);
-$red-300: tint-color($red, 40%);
-$red-400: tint-color($red, 20%);
-$red-500: $red;
-$red-600: shade-color($red, 20%);
-$red-700: shade-color($red, 40%);
-$red-800: shade-color($red, 60%);
-$red-900: shade-color($red, 80%);
-
-$orange-100: tint-color($orange, 80%);
-$orange-200: tint-color($orange, 60%);
-$orange-300: tint-color($orange, 40%);
-$orange-400: tint-color($orange, 20%);
-$orange-500: $orange;
-$orange-600: shade-color($orange, 20%);
-$orange-700: shade-color($orange, 40%);
-$orange-800: shade-color($orange, 60%);
-$orange-900: shade-color($orange, 80%);
-
-$yellow-100: tint-color($yellow, 80%);
-$yellow-200: tint-color($yellow, 60%);
-$yellow-300: tint-color($yellow, 40%);
-$yellow-400: tint-color($yellow, 20%);
-$yellow-500: $yellow;
-$yellow-600: shade-color($yellow, 20%);
-$yellow-700: shade-color($yellow, 40%);
-$yellow-800: shade-color($yellow, 60%);
-$yellow-900: shade-color($yellow, 80%);
-
-$green-100: tint-color($green, 80%);
-$green-200: tint-color($green, 60%);
-$green-300: tint-color($green, 40%);
-$green-400: tint-color($green, 20%);
-$green-500: $green;
-$green-600: shade-color($green, 20%);
-$green-700: shade-color($green, 40%);
-$green-800: shade-color($green, 60%);
-$green-900: shade-color($green, 80%);
-
-$teal-100: tint-color($teal, 80%);
-$teal-200: tint-color($teal, 60%);
-$teal-300: tint-color($teal, 40%);
-$teal-400: tint-color($teal, 20%);
-$teal-500: $teal;
-$teal-600: shade-color($teal, 20%);
-$teal-700: shade-color($teal, 40%);
-$teal-800: shade-color($teal, 60%);
-$teal-900: shade-color($teal, 80%);
-
-$cyan-100: tint-color($cyan, 80%);
-$cyan-200: tint-color($cyan, 60%);
-$cyan-300: tint-color($cyan, 40%);
-$cyan-400: tint-color($cyan, 20%);
-$cyan-500: $cyan;
-$cyan-600: shade-color($cyan, 20%);
-$cyan-700: shade-color($cyan, 40%);
-$cyan-800: shade-color($cyan, 60%);
-$cyan-900: shade-color($cyan, 80%);
-
-$blues: (
+$blue-100 : tint-color($blue, 80%);
+$blue-200 : tint-color($blue, 60%);
+$blue-300 : tint-color($blue, 40%);
+$blue-400 : tint-color($blue, 20%);
+$blue-500 : $blue;
+$blue-600 : shade-color($blue, 20%);
+$blue-700 : shade-color($blue, 40%);
+$blue-800 : shade-color($blue, 60%);
+$blue-900 : shade-color($blue, 80%);
+$indigo-100 : tint-color($indigo, 80%);
+$indigo-200 : tint-color($indigo, 60%);
+$indigo-300 : tint-color($indigo, 40%);
+$indigo-400 : tint-color($indigo, 20%);
+$indigo-500 : $indigo;
+$indigo-600 : shade-color($indigo, 20%);
+$indigo-700 : shade-color($indigo, 40%);
+$indigo-800 : shade-color($indigo, 60%);
+$indigo-900 : shade-color($indigo, 80%);
+$purple-100 : tint-color($purple, 80%);
+$purple-200 : tint-color($purple, 60%);
+$purple-300 : tint-color($purple, 40%);
+$purple-400 : tint-color($purple, 20%);
+$purple-500 : $purple;
+$purple-600 : shade-color($purple, 20%);
+$purple-700 : shade-color($purple, 40%);
+$purple-800 : shade-color($purple, 60%);
+$purple-900 : shade-color($purple, 80%);
+$pink-100 : tint-color($pink, 80%);
+$pink-200 : tint-color($pink, 60%);
+$pink-300 : tint-color($pink, 40%);
+$pink-400 : tint-color($pink, 20%);
+$pink-500 : $pink;
+$pink-600 : shade-color($pink, 20%);
+$pink-700 : shade-color($pink, 40%);
+$pink-800 : shade-color($pink, 60%);
+$pink-900 : shade-color($pink, 80%);
+$red-100 : tint-color($red, 80%);
+$red-200 : tint-color($red, 60%);
+$red-300 : tint-color($red, 40%);
+$red-400 : tint-color($red, 20%);
+$red-500 : $red;
+$red-600 : shade-color($red, 20%);
+$red-700 : shade-color($red, 40%);
+$red-800 : shade-color($red, 60%);
+$red-900 : shade-color($red, 80%);
+$orange-100 : tint-color($orange, 80%);
+$orange-200 : tint-color($orange, 60%);
+$orange-300 : tint-color($orange, 40%);
+$orange-400 : tint-color($orange, 20%);
+$orange-500 : $orange;
+$orange-600 : shade-color($orange, 20%);
+$orange-700 : shade-color($orange, 40%);
+$orange-800 : shade-color($orange, 60%);
+$orange-900 : shade-color($orange, 80%);
+$yellow-100 : tint-color($yellow, 80%);
+$yellow-200 : tint-color($yellow, 60%);
+$yellow-300 : tint-color($yellow, 40%);
+$yellow-400 : tint-color($yellow, 20%);
+$yellow-500 : $yellow;
+$yellow-600 : shade-color($yellow, 20%);
+$yellow-700 : shade-color($yellow, 40%);
+$yellow-800 : shade-color($yellow, 60%);
+$yellow-900 : shade-color($yellow, 80%);
+$green-100 : tint-color($green, 80%);
+$green-200 : tint-color($green, 60%);
+$green-300 : tint-color($green, 40%);
+$green-400 : tint-color($green, 20%);
+$green-500 : $green;
+$green-600 : shade-color($green, 20%);
+$green-700 : shade-color($green, 40%);
+$green-800 : shade-color($green, 60%);
+$green-900 : shade-color($green, 80%);
+$teal-100 : tint-color($teal, 80%);
+$teal-200 : tint-color($teal, 60%);
+$teal-300 : tint-color($teal, 40%);
+$teal-400 : tint-color($teal, 20%);
+$teal-500 : $teal;
+$teal-600 : shade-color($teal, 20%);
+$teal-700 : shade-color($teal, 40%);
+$teal-800 : shade-color($teal, 60%);
+$teal-900 : shade-color($teal, 80%);
+$cyan-100 : tint-color($cyan, 80%);
+$cyan-200 : tint-color($cyan, 60%);
+$cyan-300 : tint-color($cyan, 40%);
+$cyan-400 : tint-color($cyan, 20%);
+$cyan-500 : $cyan;
+$cyan-600 : shade-color($cyan, 20%);
+$cyan-700 : shade-color($cyan, 40%);
+$cyan-800 : shade-color($cyan, 60%);
+$cyan-900 : shade-color($cyan, 80%);
+$blues : (
   'blue-100': $blue-100,
   'blue-200': $blue-200,
   'blue-300': $blue-300,
@@ -278,8 +266,7 @@ $blues: (
   'blue-800': $blue-800,
   'blue-900': $blue-900,
 );
-
-$indigos: (
+$indigos : (
   'indigo-100': $indigo-100,
   'indigo-200': $indigo-200,
   'indigo-300': $indigo-300,
@@ -290,8 +277,7 @@ $indigos: (
   'indigo-800': $indigo-800,
   'indigo-900': $indigo-900,
 );
-
-$purples: (
+$purples : (
   'purple-100': $purple-200,
   'purple-200': $purple-100,
   'purple-300': $purple-300,
@@ -302,8 +288,7 @@ $purples: (
   'purple-800': $purple-800,
   'purple-900': $purple-900,
 );
-
-$pinks: (
+$pinks : (
   'pink-100': $pink-100,
   'pink-200': $pink-200,
   'pink-300': $pink-300,
@@ -314,8 +299,7 @@ $pinks: (
   'pink-800': $pink-800,
   'pink-900': $pink-900,
 );
-
-$reds: (
+$reds : (
   'red-100': $red-100,
   'red-200': $red-200,
   'red-300': $red-300,
@@ -326,8 +310,7 @@ $reds: (
   'red-800': $red-800,
   'red-900': $red-900,
 );
-
-$oranges: (
+$oranges : (
   'orange-100': $orange-100,
   'orange-200': $orange-200,
   'orange-300': $orange-300,
@@ -338,8 +321,7 @@ $oranges: (
   'orange-800': $orange-800,
   'orange-900': $orange-900,
 );
-
-$yellows: (
+$yellows : (
   'yellow-100': $yellow-100,
   'yellow-200': $yellow-200,
   'yellow-300': $yellow-300,
@@ -350,8 +332,7 @@ $yellows: (
   'yellow-800': $yellow-800,
   'yellow-900': $yellow-900,
 );
-
-$greens: (
+$greens : (
   'green-100': $green-100,
   'green-200': $green-200,
   'green-300': $green-300,
@@ -362,8 +343,7 @@ $greens: (
   'green-800': $green-800,
   'green-900': $green-900,
 );
-
-$teals: (
+$teals : (
   'teal-100': $teal-100,
   'teal-200': $teal-200,
   'teal-300': $teal-300,
@@ -374,8 +354,7 @@ $teals: (
   'teal-800': $teal-800,
   'teal-900': $teal-900,
 );
-
-$cyans: (
+$cyans : (
   'cyan-100': $cyan-100,
   'cyan-200': $cyan-200,
   'cyan-300': $cyan-300,
@@ -386,7 +365,6 @@ $cyans: (
   'cyan-800': $cyan-800,
   'cyan-900': $cyan-900,
 );
-
-$body-bg: $white;
-$body-color: $gray-900;
-$body-text-align: null;
+$body-bg : $white;
+$body-color : $gray-900;
+$body-text-align : null;
