--- a/src/assets/stylesheets/custom/_variable.scss
+++ b/src/assets/stylesheets/custom/_variable.scss
@@ -154,7 +154,16 @@ $theme-colors : (
 // scss-docs-end theme-colors-map
 
 // scss-docs-start theme-colors-rgb
-$theme-colors-rgb : map-loop($theme-colors, to-rgb, '$value');
+// 將顏色轉換成 RGB 格式的函數
+@function to-rgb($color) {
+  @return red($color), green($color), blue($color);
+}
+
+// 將顏色地圖轉換成 RGB 格式
+$theme-colors-rgb: ();
+@each $key, $value in $theme-colors {
+  $theme-colors-rgb: map-merge($theme-colors-rgb, ($key: to-rgb($value)));
+}
 // scss-docs-end theme-colors-rgb
 
 // The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
